--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/drizzle-adapter": "^0.8.0",
     "@hookform/resolvers": "^3.3.4",
     "@libsql/client": "^0.5.6",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
