--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.8.0",
+    "@aws-sdk/client-s3": "^3.540.0",
     "@hookform/resolvers": "^3.3.4",
     "@libsql/client": "^0.5.6",
     "@paralleldrive/cuid2": "^2.2.2",
