--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.30.1",
+    "embla-carousel-react": "^8.0.1",
     "lucide-react": "^0.352.0",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.15",
