--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ AUTH_SECRET = ""
 AUTH_GITHUB_ID = ""
 AUTH_GITHUB_SECRET = ""
 
+AUTH_GOOGLE_ID = ""
+AUTH_GOOGLE_SECRET = ""
+
 SECRET_KEY = ""
 
 CLOUDFLARE_ACCESS_KEY = ""
