--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "drizzle-orm": "^0.30.1",
     "embla-carousel-react": "^8.0.1",
     "lucide-react": "^0.352.0",
-    "next": "14.1.4",
+    "next": "^14.2.1",
     "next-auth": "^5.0.0-beta.15",
     "openai": "^4.28.4",
     "react": "^18",
