--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.30.1",
     "embla-carousel-react": "^8.0.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.352.0",
     "next": "^14.2.1",
     "next-auth": "^5.0.0-beta.15",
