--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.352.0",
     "next": "^14.2.1",
     "next-auth": "^5.0.0-beta.15",
+    "next-intl": "^3.11.1",
     "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
